--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,10 @@
   "name": "barotrauma-management-gui",
   "version": "0.1.0",
   "description": "",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
+    "build": "tsc --outDir build",
+    "start": "node build/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +19,9 @@
   },
   "homepage": "https://github.com/dylanashcraft/barotrauma-management-gui#readme",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.11.10",
     "@types/steamapi": "^2.2.5",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
@@ -25,6 +29,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "node-pty": "^1.0.0",
     "steamapi": "^3.0.7"
