--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
   "exclude": [],
   "compilerOptions": {
       "module": "nodenext",
-      "esModuleInterop": true,
+      "esModuleInterop": false,
       "strict": true,
       "removeComments": true,
       "exactOptionalPropertyTypes": true,
