Change backend and frontend to use websockets

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": [],
   "compilerOptions": {
       "module": "nodenext",
+      "allowSyntheticDefaultImports": true,
       "esModuleInterop": false,
       "strict": true,
       "removeComments": true,
