--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.10",
     "@types/steamapi": "^2.2.5",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
@@ -32,6 +33,7 @@
     "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "node-pty": "^1.0.0",
-    "steamapi": "^3.0.7"
+    "steamapi": "^3.0.7",
+    "ws": "^8.16.0"
   }
 }
