Added remote testing to baroconnect and ran a compile. Cant test it though. (see discord message for reason)

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,8 +2,8 @@
   "include": ["src/**/*"],
   "exclude": [],
   "compilerOptions": {
-      "module": "nodenext",
-      "allowSyntheticDefaultImports": true,
+      "module": "NodeNext",
+      "allowSyntheticDefaultImports": false,
       "esModuleInterop": false,
       "strict": true,
       "removeComments": true,
