Remove build files from dev environment, import baroconnect.mjs

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
   "exclude": [],
   "compilerOptions": {
       "module": "NodeNext",
-      "allowSyntheticDefaultImports": false,
+      "allowSyntheticDefaultImports": true,
       "esModuleInterop": false,
       "strict": true,
       "removeComments": true,
