--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "src/main.mjs",
   "scripts": {
     "build": "tsc --outDir build",
-    "start": "node build/main.js",
+    "watch": "tsc --outDir watch",
+    "start": "node build/main.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
