Added Watch mode

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/main.mjs",
   "scripts": {
-    "build": "tsc --outDir build",
-    "watch": "tsc --outDir watch",
+    "build": "tsc --build --outDir build",
+    "watch": "tsc --watch --outDir build",
     "start": "node build/main.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
