Added interfaces.mts to tsc exclude list

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["src/**/*"],
-  "exclude": [],
+  "exclude": ["interfaces.mts"],
   "compilerOptions": {
       "module": "NodeNext",
       "allowSyntheticDefaultImports": true,
